Переименован пакет schemas -> schemes