@@ -22,7 +22,7 @@
  * SOFTWARE.
  */
 
-package dev.kalenchukov.transliteration.schemas;
+package dev.kalenchukov.transliteration.schemes;
 
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -32,16 +32,16 @@ import java.util.Map;
 import java.util.Objects;
 
 /**
- * Класс схемы транслитерации по стандарту ГОСТ 7.79-2000 система B.
+ * Класс схемы транслитерации по стандарту ICAO DOC 9303.
  *
  * @author Aleksey Kalenchukov
  */
-public final class Gost7792000BScheme implements Schematic
+public final class IcaoDoc9303Scheme implements Schematic
 {
 	/**
-	 * Конструктор для {@code Gost7792000BScheme}.
+	 * Конструктор для {@code IcaoDoc9303Scheme}.
 	 */
-	public Gost7792000BScheme() {}
+	public IcaoDoc9303Scheme() {}
 
 	/**
 	 * {@inheritDoc}
@@ -71,11 +71,11 @@ public final class Gost7792000BScheme implements Schematic
 			Map.entry("г", "g"),
 			Map.entry("д", "d"),
 			Map.entry("е", "e"),
-			Map.entry("ё", "yo"),
+			Map.entry("ё", "e"),
 			Map.entry("ж", "zh"),
 			Map.entry("з", "z"),
 			Map.entry("и", "i"),
-			Map.entry("й", "j"),
+			Map.entry("й", "i"),
 			Map.entry("к", "k"),
 			Map.entry("л", "l"),
 			Map.entry("м", "m"),
@@ -87,17 +87,17 @@ public final class Gost7792000BScheme implements Schematic
 			Map.entry("т", "t"),
 			Map.entry("у", "u"),
 			Map.entry("ф", "f"),
-			Map.entry("х", "x"),
-			Map.entry("ц", "cz"),
+			Map.entry("х", "kh"),
+			Map.entry("ц", "ts"),
 			Map.entry("ч", "ch"),
 			Map.entry("ш", "sh"),
-			Map.entry("щ", "shh"),
-			Map.entry("ъ", "``"),
-			Map.entry("ы", "y`"),
-			Map.entry("ь", "`"),
-			Map.entry("э", "e`"),
-			Map.entry("ю", "yu"),
-			Map.entry("я", "ya")
+			Map.entry("щ", "shch"),
+			Map.entry("ъ", "ie"),
+			Map.entry("ы", "y"),
+			Map.entry("ь", ""),
+			Map.entry("э", "e"),
+			Map.entry("ю", "iu"),
+			Map.entry("я", "ia")
 		);
 	}
 
@@ -110,12 +110,7 @@ public final class Gost7792000BScheme implements Schematic
 	@Override
 	public Map<@NotNull String, @NotNull String> getRulesNext()
 	{
-		return Map.ofEntries(
-			Map.entry("це", "c"),
-			Map.entry("ци", "c"),
-			Map.entry("цй", "c"),
-			Map.entry("цы", "c")
-		);
+		return Collections.emptyMap();
 	}
 
 	/**
@@ -156,17 +151,17 @@ public final class Gost7792000BScheme implements Schematic
 			return false;
 		}
 
-		Gost7792000BScheme gost7792000BScheme = (Gost7792000BScheme) obj;
+		IcaoDoc9303Scheme icaoDoc9303Scheme = (IcaoDoc9303Scheme) obj;
 
-		if (!Objects.equals(this.getRulesPrevious(), gost7792000BScheme.getRulesPrevious())) {
+		if (!Objects.equals(this.getRulesPrevious(), icaoDoc9303Scheme.getRulesPrevious())) {
 			return false;
 		}
 
-		if (!Objects.equals(this.getRules(), gost7792000BScheme.getRules())) {
+		if (!Objects.equals(this.getRules(), icaoDoc9303Scheme.getRules())) {
 			return false;
 		}
 
-		if (!Objects.equals(this.getRulesNext(), gost7792000BScheme.getRulesNext())) {
+		if (!Objects.equals(this.getRulesNext(), icaoDoc9303Scheme.getRulesNext())) {
 			return false;
 		}
 
